--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,10 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <script>
-    window.onload = function() {
-      WordGame.Game.new().start();
-    }
-  </script>
 </head>
 <body>
-  <div id="game-area"></div>
 
-<!-- <%= yield %> -->
+<%= yield %>
 
 </body>
 </html>
