--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,3 +1,3 @@
 <section id="game-area">
-  <%= react_component('WordGame', words: @words_arr) %>
+  <%= react_component('WordGameView', words: @words_arr) %>
 </section>
