--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -2,11 +2,35 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+body {
+  /* Thanks to UIGradients.com for this one */
+  background: linear-gradient(90deg, #abbaab 10%, #ffffff 90%);
+}
+
 div.game-letter {
-  display: inline-block
+  display: inline-block;
+  border: 1px solid black;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+
+  span.game-letter {
+    font-size: 50px;
+    text-transform: uppercase;
+
+  }
 
 }
 
 .game-letter-active {
   color: red
+}
+
+.vertical-center {
+  min-height: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  align-items: center
 }
