--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,5 +1,5 @@
 <section id="game-area">
-  <div class="container-fluid">
+  <div class="container">
   <%= react_component('WordGameView', words: @words_arr,
       url: url_for(controller: 'games', action: 'new')) %>
   </div>
