--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -14,6 +14,7 @@ div.game-letter {
   padding-right: 5px;
   margin-left: 5px;
   margin-right: 5px;
+  width: 70px;
 
   span.game-letter {
     font-size: 50px;
@@ -27,10 +28,10 @@ div.game-letter {
   color: red
 }
 
-.vertical-center {
-  min-height: 100%;
-  min-height: 100vh;
+.vertical-margin-row {
+  margin-top: 30vh;
+}
 
-  display: flex;
-  align-items: center
+.letters-row {
+  text-align: center
 }
