--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <section id="game-area">
+    <%= yield %>
+  </section>
 
-<%= yield %>
+<footer>
+</footer>
 
 </body>
 </html>
