footer added and styled

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
     <%= yield %>
   </section>
 
-<footer>
+<footer class="footer">
+  <%= render partial: "layouts/footer" %>
 </footer>
 
 </body>
