--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
 <div class="container">
-  Powered by <a href="http://www.elliotreed.com">Elliot Reed</a>
+  Powered by <a target="_blank" href="http://www.elliotreed.com">Elliot Reed</a>
 </div>
